public/stylesheets/application.css
body{
	font-family: verdana, arial;
}
#body {
	width:480px;
	height:250px;
	border: 2px solid #000;
} 
#body:focus {
	background-color: #FFFFE0;
}
.inputText {
	width:300px;
	height:30px;
	border: 2px solid #000;
	background-color: #FFF;
}
.inputText:focus {
	background-color: #FFFFE0;
}
.inputButton {
	width:150px;
	height:30px;
	/border: 2px solid #000;
}
#left {
	float: left;
	width: 500px;
}
#right{
	float: left;
	width: 290px;
}
#columns {
	width: 800px;
	height: 300px;
	float: left;
}
#content{
	width: 800px;
}
ul li {
	font-size: 10px;
	margin-bottom: 5px;
}

.box_counter_header {
	background-color: #000; 
	color: #FFF; 
	width: 100px; 
	text-align: center; 
	border: 1px solid #000; 
	float: left; 
	margin: 5px 10px 0 0
}
.box_counter_body {
	background-color: #FFF; 
	color: #000; 
}

